--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,109 +32,112 @@ table {
     margin:0;
     padding:0;
 }
-/* стили сайта начинаются от сюда */
-body {                      /* задаем цвет всей страници */
+/* site styles start here */
+body {
     background-color: #F8F8FF;
-    font-family: 'Inter', sans-serif;   /* задаем шрифт всему сайту */
+    font-family: 'Inter', sans-serif;
 
 }
 
-header .right-login {                  /* сверху логин */
+header .right-login {
     display: flex;
-    justify-content: flex-end;         /* Направленость в конце */
-    margin-top: 10px;                   /* внешний отступ с верху */
-    margin-bottom: 40px;                /* внешний отступ с низу */
+    justify-content: flex-end;
+    margin-top: 10px;
+    margin-bottom: 40px;
 }
 
-header .right-login a {              /* кнопка логирование */
-    color: black;                   /* цвет кнопки чорный */
-    text-decoration: none;          /* форматируем текст */
+header .right-login a {
+    color: black;
+    text-decoration: none;
     margin: 5px;
 }
 
-header .right-login a:hover {        /* При наведение курсора меняется цвет */
+header .right-login a:hover {
     color: #808080;
 }
 
-header h1 {                              /* название заголовок  */
-    display: block;                      /* делает блочным элемент */
-    font-size: 30px;                  /* размер текста  */
-    font-weight: 700;                 /* толшина текста, размер толшены зависит от типа шрифта подключоного гугла  */
-    text-align: center;               /* расположение шрифта относительно блока  */
-    margin-bottom: 50px;              /* Нижний отступ для другого блока */
+/* title title  */
+header h1 {
+    display: block;
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 50px;
 }
 
-
-header .nav-user {                     /* полоска сверху (навигация) */
-    margin-bottom: 45px;             /* ставим отступ для дальнейшего. Отступают сверху в низ */
-    background-color: #141310;    /* Задает Черновато-зеленый цвет в навигации */
-    border-radius: 50px;            /* округление углов в полоске */
+/* top bar (navigation) */
+header .nav-user {
+    margin-bottom: 45px;
+    background-color: #141310;
+    border-radius: 50px;
 }
 
-
-
-header .img-user {               /* картинка */
+/* picture */
+header .img-user {
     padding-left: 10px;
-    width: 140px;                       /* ширина */
-    height: 100px;                         /* высота */
-    filter: invert(1);        /* фильтры см тут https://ru.w3docs.com/snippets/css/kak-izmenit-tsvet-png-izobrazheniia-s-pomoshchiu-css.html  */
+    width: 140px;
+    height: 100px;
+    filter: invert(1);
 
 }
-header .nav-link {                    /* переопредиляем цвет текста в меню */
+header .nav-link {
     color: #D3D3D3 !important;
 }
 
-header .nav-link:hover  {                /* принаведении мышки на сылку меняет цвет */
+/* when you hover the mouse over the link changes color */
+header .nav-link:hover  {
     color: #FFF8DC;
 }
 
-header .nav-link:focus {                        /* принажатие мышки на сылку меняет цвет */
+/* when you click on the link it changes color */
+header .nav-link:focus {
     color: #F0FFF0;
 }
 
-header .navbar-toggler {                       /* в меню меняем цвет на белый, когда меньше экран */
+/* in the menu, change the color to white when the screen is smaller */
+header .navbar-toggler {
     filter: invert(1);
 }
 
-/* тело */
-
-main .py-5 {                                   /* переопредиляем (удоляем) падинг */
+/* body */
+/* redefine (delete) padding */
+main .py-5 {
     padding-top: 0 !important;
 }
 
-
-
-
 main .edit {
-    text-decoration: none;          /* убираем декорацию текста  */
-    font-size: 10px;                /* размер шрифта  */
-    color: #1E90FF ;                  /* цвет  */
+    text-decoration: none;
+    font-size: 10px;
+    color: #1E90FF ;
 }
 
-main .text-user a {              /* кнопка на верх  */
+/* up button */
+main .text-user a {
     text-decoration: none;
-    border: 3px solid #ffffff;           /* создаем рамка вокруг: толшина тип цвет  */
-    border-radius: 20px ;               /* закругление имеет 4 свойства  */
-    color: #fff;                        /* цвет текста  */
-    padding: 10px 20px;                 /* внутрение отступы от текста  */
-    transition: .3s;                   /*  время выполнение задачи, ноль можно не указывать (0,3)  */
+    border: 3px solid #ffffff;
+    border-radius: 20px ;
+    color: #fff;
+    padding: 10px 20px;
+    transition: .3s;
     background-color: #252525;
 
 }
 
-main .text-user a:hover {                /* эфекты при наведение на кнопка на верх  */
-    background: #E1E1E1;               /* В какой цвет должен изменятся при наведение  */
-    box-shadow: 0 0 6px 1px #cccc ;    /* смешение x, y , размытость ,рамка толшина ,цвет ( это тень) */
-    color: #2A2A2A;                    /* изменение цвета текста при наведении  */
+/* button hover effects */
+main .text-user a:hover {
+    background: #E1E1E1;
+    box-shadow: 0 0 6px 1px #cccc ;
+    color: #2A2A2A;
 }
 
-/* подвал */
-
-footer .p {                               /* Падинг для всего подвала (чорная линия) */
+/* footer */
+/* Padding for the entire basement (black line) */
+footer .p {
     padding: 50px;
 }
 
-footer .container-fluid a {           /* сылки */
+/* links */
+footer .container-fluid a {
     opacity: 0.4;
     font-size: 15px;
     line-height: 16px;
@@ -142,13 +145,27 @@ footer .container-fluid a {           /* сылки */
     color: #ffffff;
 }
 
-footer .container-fluid a:hover {      /* интерактив сылок */
+/* interactive links */
+footer .container-fluid a:hover {
     opacity: 0.7;
 }
 
 /* add */
-
-main form select, datalist {           /* обрашение к форме что бы они нетак были слитны */
+/* call to the form so they are not merged like that */
+main form select, datalist {
     margin-bottom: 10px;
-
 }
+
+/* modal */
+.btn {
+    margin-left: 5px;
+}
+
+/* disable field */
+.disabled {
+    background-color: #DCDCDC;
+    color: #000000;
+    opacity: 1;
+    pointer-events: none;
+}
+
